--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,12 @@
 }
 
 :root {
-  --azul-escuro: #041833;
+  --background: #292930;
   --azul-medio: #1875E8;
   --cor-fonte-principal: #041833;
   --cor-fonte-post: #444444;
-  --branco: #FFF;
-  --fonte-principal: 'Raleway', sans-serif;
+  --branco: #f5f5f5;
+  --fonte-principal: ' font-family: "Poppins", serif';
   --fonte-secundaria: 'Playfair Display', sans-serif;
 
   font-family: var(--fonte-principal);
